# rust-slack-hello-command

./: Cargo.toml  Makefile
src/: main.rs
