[package]
name = "rust-slack-hello-command"
version = "0.1.0"
authors = ["Arata Tanaka <2089153+ara-ta3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
